numeric values .toString()

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                 console.log("Got organisations:", sp_response);
                 $scope.seqeraplatform.orgs = sp_response.organizations;
                 if($scope.seqeraplatform.orgs.length > 0){
-                  $scope.seqeraplatform.selected_org = $scope.seqeraplatform.orgs[0].orgId;
+                  $scope.seqeraplatform.selected_org = $scope.seqeraplatform.orgs[0].orgId.toString();
                 } else {
                   $scope.seqeraplatform.selected_org = '';
                   $scope.seqeraplatform.workspace_id = '';
@@ -945,7 +945,7 @@
                     console.log(`Got workspaces for org ${org.orgId}`, sp_response);
                     $scope.seqeraplatform.workspaces[org.orgId] = sp_response.workspaces;
                     if(org.orgId == $scope.seqeraplatform.selected_org && $scope.seqeraplatform.workspaces[org.orgId].length > 0){
-                      $scope.seqeraplatform.workspace_id = $scope.seqeraplatform.workspaces[org.orgId][0].id;
+                      $scope.seqeraplatform.workspace_id = $scope.seqeraplatform.workspaces[org.orgId][0].id.toString();
                     }
                   }, function errorCallback(sp_response) {
                     console.log(`Error fetching workspaces for org: ${org}}`, sp_response);
@@ -959,7 +959,7 @@
             }
 
             $scope.update_seqera_org = function(){
-              $scope.seqeraplatform.workspace_id = $scope.seqeraplatform.workspaces[$scope.seqeraplatform.selected_org][0].id;
+              $scope.seqeraplatform.workspace_id = $scope.seqeraplatform.workspaces[$scope.seqeraplatform.selected_org][0].id.toString();
             }
 
             // Send metadata to Seqera Platform
