--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                             <div class="col-sm-2">
                               <label class="sr-only" for="sp_workspace_id">Workspace</label>
                               <select class="form-control" ng-model="seqeraplatform.workspace_id" id="sp_workspace_id">
-                                <option ng-repeat="(wsId, ws) in seqeraplatform.workspaces[seqeraplatform.selected_org]" value="{{ wsId }}">{{ ws.fullName }}</option>
+                                <option ng-repeat="(wsId, wsName) in seqeraplatform.workspaces[seqeraplatform.selected_org]" value="{{ wsId }}">{{ wsName }}</option>
                               </select>
                             </div>
                             <div class="col-sm-2">
@@ -529,7 +529,7 @@
                           </div>
                         </form>
                         <div ng-show="seqeraPlatformMessages.length > 0" class="alert alert-info">
-                          <d ng-repeat="x in seqeraPlatformMessages"><p ng-bind-html="x"></p></d>
+                          <p ng-repeat="x in seqeraPlatformMessages"><ng-bind-html ng-bind-html="x"></ng-bind-html></p>
                         </div>
                         <p ng-show="savedResultsENAaccessions.length < savedResults.length" class="text-center"><span class="glyphicon glyphicon-refresh fa-spin"></span> Loading <span class="badge"><span ng-bind="savedResultsENAaccessions.length"></span> / <span ng-bind="savedResults.length"></span></span>..</p>
                         <div id="fullSeqeraPlatform_table_wrapper">
@@ -632,13 +632,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/3.12.2/js-yaml.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 
     <!-- SRA-Explorer Code -->
     <script type="text/javascript">
-        var app = angular.module("sraExplorerApp", []);
+        var app = angular.module("sraExplorerApp", ['ngSanitize']);
         app.controller("searchCtrl", function($scope, $http) {
 
             $scope.searchText = "";
@@ -976,7 +977,7 @@
                       if(!(ws.orgId in $scope.seqeraplatform.workspaces)){
                         $scope.seqeraplatform.workspaces[ws.orgId] = {};
                       }
-                      $scope.seqeraplatform.workspaces[ws.orgId][ws.workspaceId] = {'fullName': ws.workspaceFullName, 'name': ws.workspaceName};
+                      $scope.seqeraplatform.workspaces[ws.orgId][ws.workspaceId] = ws.workspaceName;
                     }
                   });
                 });
@@ -1011,11 +1012,8 @@
                   return;
                 }
                 // Build FE URL to published dataset
-                console.log(sp.selected_org, sp.workspace_id, sp.orgs, sp.workspaces);
-                console.log(sp.orgs[sp.selected_org]);
-                console.log(sp.workspaces[sp.selected_org][sp.workspace_id]);
                 let org_name = sp.orgs[sp.selected_org];
-                let ws_name = sp.workspaces[sp.selected_org][sp.workspace_id]['name'];
+                let ws_name = sp.workspaces[sp.selected_org][sp.workspace_id];
                 let dataset_url = sp.frontend_url.replace(/\/+$/, '')+'/orgs/'+org_name+'/workspaces/'+ws_name+'/datasets/'+sp_response.data.dataset.id;
                 $scope.seqeraPlatformMessages.push('Created dataset: <a href="'+dataset_url+'" target="_blank"><code>'+sp_response.data.dataset.id)+'</code></a>';
 
